--- a/src/style-sheets/App.css
+++ b/src/style-sheets/App.css
@@ -7,7 +7,7 @@
 .main-container {
   height: 100vh;
   width: 100%;
-  background-color: #ffffff;
+  background-color: rgba(242, 243, 250, 0.7058823529);
   display: flex;
   justify-content: center;
   align-items: center;
