--- a/src/style-sheets/Calculator.css
+++ b/src/style-sheets/Calculator.css
@@ -1,6 +1,6 @@
 .calculator {
-  border: 2px solid rgba(0, 0, 0, 0.548);
-  height: 520px;
+  border: 2px solid rgba(0, 0, 0, 0.849);
+  height: 470px;
   width: 320px;
   background-color: #f6f6f6;
 }
@@ -12,5 +12,6 @@
 }
 
 .row {
+  display: flex;
   max-height: 50px;
 }/*# sourceMappingURL=Calculator.css.map */
